--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,9 +1,9 @@
 .indexBg {
   background: url("../img/index_bg.jpg") repeat 0 -30px;
   background-size: 100%;
-  min-height: 1500px;
+  // min-height: 1500px;
   box-sizing: border-box;
-  padding-top: 50px;
+  padding-bottom: 50px;
 }
 .IndexAnimalCard {
   margin: 20px auto;
