--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -1,3 +1,20 @@
 body {
   background: #eee9df;
 }
+.defaultBtn {
+  background: #d8a338;
+  border: none;
+  padding: 8px 40px;
+  font-family: Noto Sans TC;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 29px;
+  color: #ffffff;
+  border-radius: 0.25em;
+  &:hover,
+  &:active {
+    color: #fff;
+    text-decoration: none;
+  }
+}
