--- a/src/assets/scss/card.scss
+++ b/src/assets/scss/card.scss
@@ -1,6 +1,8 @@
 .card {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   border: none;
+  color: #444544;
+  text-decoration: none;
   .card-img-top {
     background: #e0e0e0;
     border: none;
