--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -78,3 +78,10 @@
 .dropdown-menu {
   box-shadow: 0 0 5px rgba(#000, 0.2);
 }
+.navbar-brand {
+  width: 234px;
+  height: 50px;
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
