--- a/src/assets/scss/animalDetail.scss
+++ b/src/assets/scss/animalDetail.scss
@@ -1,4 +1,67 @@
 .animalDetailWrapper {
   background: url(../img/animalDetail_bg.jpg) no-repeat center top;
+  background-size: 100%;
   min-height: 1000px;
+  padding-top: 20px;
+  .swiper-container {
+    // padding-top: 30px;
+    border-radius: 8px;
+  }
+
+  .detailWrapper {
+    margin-top: 20px;
+  }
+  .detailColWrapper {
+    background: #fff;
+    border-radius: 8px;
+    padding: 30px;
+    .detail {
+      padding-top: 30px;
+    }
+    h5 {
+      /* H3 22pt B */
+      font-family: Noto Sans TC;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 22px;
+      line-height: 32px;
+      color: #444544;
+      margin-bottom: 0;
+    }
+    .smallTitle {
+      display: flex;
+      align-items: center;
+      h6 {
+        margin: 0;
+        margin-right: 15px;
+      }
+    }
+    .smallDtail {
+      padding-top: 25px;
+      padding-bottom: 30px;
+      border-bottom: 1px solid #e0e0e0;
+    }
+    .list-group-item {
+      padding: 0;
+      padding-bottom: 10px;
+      border: none;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 23px;
+      color: #444544;
+
+      i {
+        margin-right: 15px;
+        svg path {
+          fill: #d8a338;
+        }
+      }
+    }
+  }
+}
+.defaultDetailBtnGroup {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
 }
