--- a/src/assets/scss/banner.scss
+++ b/src/assets/scss/banner.scss
@@ -1,7 +1,7 @@
 .swiper-container {
-  max-height: 500px;
+  // max-height: 500px;
+  background: #fff;
 }
 .swiper-slide {
   text-align: center;
-  background: #fff;
 }
