--- a/src/assets/scss/card.scss
+++ b/src/assets/scss/card.scss
@@ -3,6 +3,10 @@
   border: none;
   color: #444544;
   text-decoration: none;
+  a {
+    color: #444544;
+    text-decoration: none;
+  }
   .card-img-top {
     background: #e0e0e0;
     border: none;
