--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -1,5 +1,9 @@
 .header {
   background: #eee9df;
+  position: fixed;
+  width: 100%;
+  z-index: 99;
+  top: 0;
 }
 .navbar-nav {
   align-items: center;
