--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -5,6 +5,7 @@
   background: url("../img/index_bg.jpg") repeat 0 -30px;
   background-size: 100%;
   // min-height: 1500px;
+  min-height: calc(100vh - 150px);
   box-sizing: border-box;
   padding-bottom: 50px;
   padding-top: 50px;
