--- a/src/assets/scss/animalDetail.scss
+++ b/src/assets/scss/animalDetail.scss
@@ -25,7 +25,7 @@
     }
     h5 {
       /* H3 22pt B */
-      font-family: Noto Sans TC;
+      font-family: "Noto Sans TC", "Microsoft JhengHei", "PingFang", Arial;
       font-style: normal;
       font-weight: bold;
       font-size: 22px;
