--- a/src/assets/scss/filter.scss
+++ b/src/assets/scss/filter.scss
@@ -1,6 +1,6 @@
 #filterWrapper {
   /* 尋找我的毛小孩 */
-  font-family: GenSenRounded JP;
+  font-family: "Noto Sans TC", "Microsoft JhengHei", "PingFang", Arial;
   font-style: normal;
   font-weight: bold;
   font-size: 40px;
@@ -86,7 +86,7 @@
       background: #d8a338;
       border: none;
       padding: 10px 40px;
-      font-family: Noto Sans TC;
+      font-family: "Noto Sans TC", "Microsoft JhengHei", "PingFang", Arial;
       font-style: normal;
       font-weight: bold;
       font-size: 20px;
