--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -18,7 +18,7 @@
 .IndexAnimalCard {
   margin: 20px auto;
   margin-top: 142px;
-  font-family: GenSenRounded JP;
+  font-family: "Noto Sans TC", "Microsoft JhengHei", "PingFang", Arial;
   /* identical to box height */
   text-align: center;
   letter-spacing: 0.05em;
