--- a/src/assets/scss/infomationItem.scss
+++ b/src/assets/scss/infomationItem.scss
@@ -14,7 +14,7 @@
 }
 .informationText {
   h4 {
-    font-style: normal;
+    font-family: "Noto Sans TC", "Microsoft JhengHei", "PingFang", Arial;
     font-weight: bold;
     font-size: 28px;
     line-height: 41px;
@@ -22,7 +22,7 @@
     color: #333333;
   }
   p {
-    font-family: Noto Sans TC;
+    font-family: "Noto Sans TC", "Microsoft JhengHei", "PingFang", Arial;
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
