--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap");
 body {
   background: #eee9df;
 }
@@ -5,7 +6,7 @@ body {
   background: #d8a338;
   border: none;
   padding: 8px 40px;
-  font-family: Noto Sans TC;
+  font-family: "Noto Sans TC", "Microsoft JhengHei", "PingFang", Arial;
   font-style: normal;
   font-weight: bold;
   font-size: 20px;
