--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -7,7 +7,7 @@
   bottom: 0;
   .container {
     color: #fff;
-    font-family: Noto Sans TC;
+    font-family: "Noto Sans TC", "Microsoft JhengHei", "PingFang", Arial;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
