--- a/src/assets/scss/filter.scss
+++ b/src/assets/scss/filter.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap");
 #filterWrapper {
   /* 尋找我的毛小孩 */
   font-family: "Noto Sans TC", "Microsoft JhengHei", "PingFang", Arial;
