--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap");
 #root {
   margin-top: 65px;
 }
@@ -22,9 +23,6 @@
   /* identical to box height */
   text-align: center;
   letter-spacing: 0.05em;
-  /* 尋找我的毛小孩 */
-  // margin: 30px auto;
-  /* Achromatic/dark grey */
   color: #444544;
   h6 {
     margin-bottom: 84px;
