update animal setting

--- a/src/assets/scss/filter.scss
+++ b/src/assets/scss/filter.scss
@@ -113,7 +113,11 @@
 }
 
 // animalFilterSetting
-
+.loading {
+  img {
+    width: 100%;
+  }
+}
 .animalFilterWrapper {
   #filterWrapper {
     .filterSection {
